; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_buf_io.c_buf_io_get_size.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_buf_io.c_buf_io_get_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf_io_priv = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 (i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @buf_io_get_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buf_io_get_size(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.buf_io_priv*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.buf_io_priv* @get_priv_io(i32* %4)
  store %struct.buf_io_priv* %5, %struct.buf_io_priv** %3, align 8
  %6 = load %struct.buf_io_priv*, %struct.buf_io_priv** %3, align 8
  %7 = getelementptr inbounds %struct.buf_io_priv, %struct.buf_io_priv* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i32 (i32, i32)*, i32 (i32, i32)** %9, align 8
  %11 = load %struct.buf_io_priv*, %struct.buf_io_priv** %3, align 8
  %12 = getelementptr inbounds %struct.buf_io_priv, %struct.buf_io_priv* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.buf_io_priv*, %struct.buf_io_priv** %3, align 8
  %17 = getelementptr inbounds %struct.buf_io_priv, %struct.buf_io_priv* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 %10(i32 %15, i32 %18)
  ret i32 %19
}

declare dso_local %struct.buf_io_priv* @get_priv_io(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
